# Stoxx-Capping-Service

./: README.md  create_grpc_stubs_from_proto.bat  pyproject.toml
docs/: conf.py  index.rst
docs/_build/doctrees/: conftest.doctree  environment.pickle  index.doctree  modules.doctree  stoxx_capping_service.doctree
docs/_build/html/: .buildinfo  conftest.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  stoxx_capping_service.html
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/stoxx_capping_service/: capping_client.html  capping_exposure.html  capping_pb2_grpc.html  core_logger.html
docs/_build/html/_sources/: modules.rst.txt  stoxx_capping_service.rst.txt
proto/: capping.proto
stoxx_capping_service/: capping_Core.py  capping_client.py  capping_exposure.py  capping_ladder.py  capping_pb2.py  capping_pb2.pyi  capping_pb2_grpc.py  capping_server.py  core_logger.py
stoxx_capping_test/: capping_client_basic.py  capping_client_equal.py  capping_client_ladder.py  capping_client_multi.py  test_basic_capping.py  test_equal_capping.py  test_exposure_capping.py  test_ladder_capping.py  test_multi_capping.py
stoxx_capping_test/redundund test/: Basic_test_new.py  capping_client_basic.py  capping_client_equal.py  capping_client_exposure.py  capping_client_ladder.py  capping_client_multi.py
